<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/default_bg"
     >
     <ImageView
       		android:layout_width="match_parent"
        	android:layout_height="wrap_content"        
        	android:id="@+id/stationinfolooktitle"
        	android:src="@drawable/stationinfoname"
        	android:gravity="center_horizontal"
        	/>
     <ScrollView 
         android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
      android:layout_width="match_parent"
    android:layout_height="300dp">
  <TableLayout 
      android:background="@drawable/bg_border"
      android:layout_width="match_parent"
    android:layout_height="wrap_content">
       	
     <TableRow
              android:gravity="center_horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp">
    	<TextView    	
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:textSize="8pt"  
			android:text="@string/stationname"/>
    	<TextView    
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:textSize="8pt" 
   	 		android:text="1"/>   
    </TableRow>
    		
   
	<TableRow
	         android:gravity="center_horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"> 
    	<TextView
        	android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
       	 	android:text="@string/stationaccount"
        	android:textSize="8pt" />
		<TextView        	
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:textSize="8pt" 
    		android:text="2"/>   
    </TableRow>
    
	<TableRow
	         android:gravity="center_horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"> 
    	<TextView       	
			android:layout_width="wrap_content"
			android:layout_height="50dp" 
			android:textSize="8pt"  
			android:text="@string/stationpassword"/>
    	<TextView       	
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:textSize="8pt" 
    		android:text="3"/>   
    </TableRow>
    
    <TableRow
             android:gravity="center_horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<TextView 	       
			android:layout_width="wrap_content"
			android:layout_height="50dp" 
			android:textSize="8pt"  
			android:text="@string/stationaddress"/>
   	 	<TextView 	       
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:textSize="8pt" 
   	 		android:text="4"/> 
    </TableRow>
 
    <TableRow
             android:gravity="center_horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<TextView 	       
			android:layout_width="wrap_content"
			android:layout_height="50dp" 
			android:textSize="8pt"  
			android:text="@string/stationphone"/>
   	 	<TextView 	       
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:textSize="8pt" 
   	 		android:text="5"/> 
    </TableRow>
    
    <TableRow
             android:gravity="center_horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<TextView 	       
			android:layout_width="wrap_content"
			android:layout_height="50dp" 
			android:textSize="8pt"  
			android:text="@string/stationonlyone"/>
   	 	<TextView 	       
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:textSize="8pt" 
   	 		android:text="6"/> 
    </TableRow>
   
  </TableLayout>
 </ScrollView>
 <LinearLayout 
 	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
     android:layout_gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/confirm"
    	android:id="@+id/statoninfolookconfirm"
    	/>
    <Button
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:id="@+id/statoninfolookcancel"
    	android:text="@string/cancel"/>   
 </LinearLayout>
	
    	
</LinearLayout>