<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/userinfotitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/userinfoname" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="1"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/useremail"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/useremail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="2"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/userage"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/userage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="3"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/usergender"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/usergender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="4"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/userphone"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/userphone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="5"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/userzipcode"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/userzipcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="6"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/useraddress"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/useraddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="6"
                    android:textSize="8pt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/userinfoedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit" />

        <Button
            android:id="@+id/userinfocancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cancel" />
    </LinearLayout>

</LinearLayout>