<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/orderinfotitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/orderinfoname" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical"
                    android:text="@string/ordername"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/ordername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical"
                    android:text="@string/orderaddress"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/orderaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/orderzipcode"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/orderzipcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/ordercontent"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/ordercontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/orderamount"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/orderamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/orderweight"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/orderweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/ordercode"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/ordercode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/orderbarcode"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/orderbarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/ordercreatetime"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/ordercreatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DDDDDD"
                    android:text="@string/orderuserid"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/orderuserid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Initialization"
                    android:textSize="8pt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/orderinfoedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/orderinfocancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>