<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/stationinfotitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/stationinfoname" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BBBBBB"
                    android:gravity="center_vertical"
                    android:text="@string/stationname"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/stationname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BBBBBB"
                    android:gravity="center_vertical"
                    android:text="@string/stationaccount"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/stationaccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BBBBBB"
                    android:text="@string/stationpassword"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/stationpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BBBBBB"
                    android:text="@string/stationaddress"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/stationaddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BBBBBB"
                    android:text="@string/stationphone"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/stationphone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="initialization"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BBBBBB"
                    android:text="@string/stationonlyone"
                    android:textSize="8pt" />

                <TextView
                    android:id="@+id/stationonlyone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="initialization"
                    android:textSize="8pt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/stationinfoedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/stationinfocancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>